# spacetime-super-heroes

./: .gitignore  Cargo.toml  Dockerfile  build.sh  cardamon.toml  compose.yml  docker-compose-noclient.yml  docker-compose.yml  high.js  low.js  max.js  none.js  usage_scenario.yml  wait.sh  xtreme.js
.github/workflows/: build.yml
k6/: high.js  load.js  load_multi.js  low.js  max.js  none.js  randomFight.js
services/superhero-client/: Cargo.toml  Dockerfile
services/superhero-client/src/: fight_instance.rs  lib.rs  main.rs  pool.rs
services/superhero-client/src/types/: mod.rs
services/superhero-importer/: Cargo.toml  Dockerfile  docker-compose.yml
services/superhero-importer/src/: main.rs
services/superhero-importer/src/sql/: fights.rs  location.rs  villains.rs
spacetime-modules/: Dockerfile
spacetime-modules/superhero-server/: README.md
spacetime-modules/superhero-server/src/: lib.rs
spacetime-modules/superhero-server/src/types/: mod.rs
