[package]
name = "superhero-client"
version = "0.1.0"
edition = "2024"

[dependencies]
axum = {version="0.8.3", features = ["macros", "json"] }
env_logger = "0.11.8"
log = "0.4.27"
rand = "0.9.0"
rand_isaac = "0.4.0"
serde = "1.0.219"
serde_json = "1.0.140"
spacetimedb-sdk = "1.0.1"
tokio = { version = "1.44.2", features = ["full"] }
