[package]
name = "superhero-client"
version = "0.1.0"
edition = "2024"

[dependencies]
anyhow = "1.0.98"
async-trait = "0.1.88"
axum = {version="0.8.3", features = ["macros", "json"] }
clap = { version = "4.5.37", features = ["derive"] }
deadpool = { version = "0.12.2", features = ["rt_tokio_1"] }
env_logger = "0.11.8"
log = "0.4.27"
rand = "0.9.0"
rand_isaac = "0.4.0"
rlt = "0.2.1"
serde = "1.0.219"
serde_json = "1.0.140"
spacetimedb-sdk = "1.8.0"
tokio = { version = "1.44.2", features = ["full"] }

[[bin]]
name = "superhero-client"
path = "src/bin/main.rs"

[[bin]]
name = "superhero-bench"
path = "src/bin/main_bench.rs"
